updated admin pages to use centralized responsive code. add resposive code in admin-resize-behavior.html. added default resize-beahvior... no code there yet..

--- a/src/pages/admin/ad-dash/ad-dash.html
+++ b/src/pages/admin/ad-dash/ad-dash.html
@@ -4,12 +4,16 @@
 
   <template>
 
-    <style include="common-styles"></style>
-    <style>
+    <media-queries
+      dimensions="{{dimensions}}">
+    </media-queries>
 
-    .pageCard{
-      min-height:800px;
-    }
+    <style include="common-styles">
+
+      .pageCard{
+        min-height:800px;
+      }
+
     </style>
 
     <paper-card class="pageCard">
@@ -33,7 +37,8 @@
         this.fire("pageLoaded", {page:this.page});
       },
       behaviors:[
-        Polymer.adminPagesAnimation
+        Polymer.adminPagesAnimation,
+        Polymer.adminResizeBehavior
       ]
     });
 
