--- a/src/pages/admin/ad-dash/dependencies.html
+++ b/src/pages/admin/ad-dash/dependencies.html
@@ -2,7 +2,9 @@
 <link rel="import" href="../../../../bower_components/paper-card/paper-card.html" />
 
 <link rel="import" href="../../../elements/admin-header/admin-header.html" />
+<link rel="import" href="../../../elements/media-queries/media-queries.html" />
 
 <link rel="import" href="../../../behaviors/animations/admin-pages-animation.html" />
+<link rel="import" href="../../../behaviors/admin-resize-behavior.html" />
 
 <link rel="import" href="../../../styles/common-styles.html" />
