--- a/src/pages/admin/ad-payment/dependencies.html
+++ b/src/pages/admin/ad-payment/dependencies.html
@@ -6,10 +6,11 @@
 <link rel="import" href="../../../../bower_components/paper-icon-button/paper-icon-button.html" />
 <link rel="import" href="../../../../bower_components/iron-icons/iron-icons.html" />
 <link rel="import" href="../../../../bower_components/app-layout/app-grid/app-grid-style.html" />
-<link rel="import" href="../../../../bower_components/iron-media-query/iron-media-query.html" />
 
 <link rel="import" href="../../../elements/admin-header/admin-header.html" />
+<link rel="import" href="../../../elements/media-queries/media-queries.html" />
 
 <link rel="import" href="../../../behaviors/animations/admin-pages-animation.html" />
+<link rel="import" href="../../../behaviors/admin-resize-behavior.html" />
 
 <link rel="import" href="../../../styles/common-styles.html" />
