updated default pages to implement default-resize-behavior. updated default-pages-animation to use the correct animations.

--- a/src/behaviors/animations/default-pages-animation.html
+++ b/src/behaviors/animations/default-pages-animation.html
@@ -9,6 +9,8 @@
 <link rel="import" href="../../../bower_components/neon-animation/animations/slide-from-left-animation.html">
 <link rel="import" href="../../../bower_components/neon-animation/animations/slide-from-right-animation.html">
 <link rel="import" href="../../../bower_components/neon-animation/animations/slide-from-top-animation.html">
+<link rel="import" href="./slide-down-exit-animation.html" />
+<link rel="import" href="./slide-down-entry-animation.html" />
 
 <script>
   (function(){
