--- a/src/pages/default/def-error/dependencies.html
+++ b/src/pages/default/def-error/dependencies.html
@@ -1,6 +1,9 @@
 <link rel="import" href="../../../../bower_components/polymer/polymer.html" />
 <link rel="import" href="../../../../bower_components/paper-card/paper-card.html" />
 
+<link rel="import" href="../../../elements/media-queries/media-queries.html" />
+
 <link rel="import" href="../../../behaviors/animations/default-pages-animation.html" />
+<link rel="import" href="../../../behaviors/default-resize-behavior.html" />
 
 <link rel="import" href="../../../styles/common-styles.html" />
