--- a/src/behaviors/default-resize-behavior.html
+++ b/src/behaviors/default-resize-behavior.html
@@ -4,7 +4,67 @@
 (function(){
   "use-strict";
   Polymer.defaultResizeBehavior={
-    is:"default-resize-behavior"
+    is:"default-resize-behavior",
+    ready:function(){
+      console.log("cool");
+    },
+    observers:[
+      "screenChange(dimensions.*)"
+    ],
+    screenChange:function(dimensions){
+      //available queries= 640 900 750 1100
+      if(this.page==="def-error"){
+
+      };
+      if(this.page==="def-home"){
+        //available queries= 640 900 750 1100
+        // orig widths= 1300, 1100, 900, 700, 500
+
+        //combined new widths= 1100 900 750 640
+        var appGridColumns="5";
+        var mainFabPosition="absolute";
+        var mainFabTop="140px";
+        var mainFabBottom="unset";
+        if(dimensions.base.query640){
+          appGridColumns="1";
+          mainFabPosition="fixed";
+          mainFabTop="unset";
+          mainFabBottom="5%";
+        } else if(dimensions.base.query750){
+          appGridColumns="2";
+          mainFabPosition="absolute";
+          mainFabTop="140px";
+          mainFabBottom="unset";
+        } else if(dimensions.base.query900){
+          appGridColumns="3";
+          mainFabPosition="absolute";
+          mainFabTop="140px";
+          mainFabBottom="unset";
+        } else if(dimensions.base.query1100){
+          appGridColumns="4";
+          mainFabPosition="absolute";
+          mainFabTop="140px";
+          mainFabBottom="unset";
+        };
+        this.customStyle["--app-grid-columns"]=appGridColumns;
+        this.customStyle["--main-fab-position"]=mainFabPosition;
+        this.customStyle["--main-fab-top"]=mainFabTop;
+        this.customStyle["--main-fab-bottom"]=mainFabBottom;
+        this.updateStyles();
+      };
+      if(this.page==="def-login"){
+        //orig width= 400px
+        var appGridColumns="2";
+        if(dimensions.base.query640){
+          appGridColumns="1";
+        };
+        this.customStyle["--app-grid-columns"]=appGridColumns;
+        this.updateStyles();
+      };
+      if(this.page==="def-verify"){
+        
+      };
+    }
   };
 })();
 
