--- a/src/pages/default/def-home/dependencies.html
+++ b/src/pages/default/def-home/dependencies.html
@@ -8,9 +8,11 @@
 <link rel="import" href="../../../../bower_components/iron-image/iron-image.html" />
 <link rel="import" href="../../../../bower_components/paper-icon-button/paper-icon-button.html"/>
 <link rel="import" href="../../../../bower_components/app-layout/app-grid/app-grid-style.html" />
-<link rel="import" href="../../../../bower_components/iron-media-query/iron-media-query.html" />
 <link rel="import" href="../../../../bower_components/app-storage/app-indexeddb-mirror/app-indexeddb-mirror.html" />
 
+<link rel="import" href="../../../elements/media-queries/media-queries.html" />
+
 <link rel="import" href="../../../behaviors/animations/default-pages-animation.html" />
+<link rel="import" href="../../../behaviors/default-resize-behavior.html" />
 
 <link rel="import" href="../../../styles/common-styles.html" />
