--- a/src/pages/default/def-login/dependencies.html
+++ b/src/pages/default/def-login/dependencies.html
@@ -3,10 +3,12 @@
 <link rel="import" href="../../../../bower_components/paper-button/paper-button.html" />
 <link rel="import" href="../../../../bower_components/paper-input/paper-input.html" />
 <link rel="import" href="../../../../bower_components/app-layout/app-grid/app-grid-style.html" />
-<link rel="import" href="../../../../bower_components/iron-media-query/iron-media-query.html" />
 <link rel="import" href="../../../../bower_components/polymerfire/firebase-auth.html" />
 <link rel="import" href="../../../../bower_components/iron-collapse/iron-collapse.html" />
 
+<link rel="import" href="../../../elements/media-queries/media-queries.html" />
+
 <link rel="import" href="../../../behaviors/animations/default-pages-animation.html" />
+<link rel="import" href="../../../behaviors/default-resize-behavior.html" />
 
 <link rel="import" href="../../../styles/common-styles.html" />
