--- a/src/pages/default/def-verify/dependencies.html
+++ b/src/pages/default/def-verify/dependencies.html
@@ -4,6 +4,9 @@
 <link rel="import" href="../../../../bower_components/polymerfire/firebase-auth.html" />
 <link rel="import" href="../../../../bower_components/paper-input/paper-input.html" />
 
+<link rel="import" href="../../../elements/media-queries/media-queries.html" />
+
 <link rel="import" href="../../../behaviors/animations/default-pages-animation.html" />
+<link rel="import" href="../../../behaviors/default-resize-behavior.html" />
 
 <link rel="import" href="../../../styles/common-styles.html" />
