proper js format for polymer build

--- a/src/behaviors/admin-resize-behavior.html
+++ b/src/behaviors/admin-resize-behavior.html
@@ -11,7 +11,7 @@
     observers:[
       "screenChange(dimensions.*)"
     ],
-    screenChange(dimensions){
+    screenChange:function(dimensions){
       if(this.page==="ad-dash"){
 
       };
