--- a/src/pages/care-plan/su-risk/su-risk-multi-view.html
+++ b/src/pages/care-plan/su-risk/su-risk-multi-view.html
@@ -101,7 +101,7 @@
       <paper-button on-tap="deleteRisk">delete</paper-button>
     </paper-dialog>
 
-    <paper-card class="app-grid" has-aspect-ratio>
+    <paper-card class="multiViewCard app-grid" has-aspect-ratio>
 
       <!--
       <div hidden="{{queryCount}}">
