--- a/src/pages/care-plan/su-risk/su-risk.html
+++ b/src/pages/care-plan/su-risk/su-risk.html
@@ -106,7 +106,7 @@
 
       <div class="pageInnerCont">
 
-        <!--absolute positioned button to add a new risk-->
+        <!--absolute position button to add a new risk-->
 
         <paper-fab
           id="regFab"
@@ -114,7 +114,7 @@
           on-tap="addRisk">
         </paper-fab>
 
-        <!--absolute positioned button to finsh adding a new risk assessment and close the add view-->
+        <!--fixed position button to finsh adding a new risk assessment and close the add view-->
 
         <paper-fab
           id="editFab"
