--- a/src/styles/common-styles.html
+++ b/src/styles/common-styles.html
@@ -204,9 +204,20 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         display:inline-block;
         text-align:center;
       }
-      /* edit/multi styles*/
+      /* edit view styles*/
       .editViewCard{
         width:100%;
+      }
+      /* multi view styles */
+      .multiViewCard{
+        width:100%;
+      }
+      .multiCardContainer{
+
+      }
+      .multiItem{
+        margin:20px;
+        
       }
     </style>
   </template>
