--- a/src/pages/care-plan/su-care-review/dependencies.html
+++ b/src/pages/care-plan/su-care-review/dependencies.html
@@ -3,16 +3,20 @@
 <link rel="import" href="../../../../bower_components/polymerfire/firebase-query.html" />
 <link rel="import" href="../../../../bower_components/paper-fab/paper-fab.html" />
 <link rel="import" href="../../../../bower_components/paper-dialog/paper-dialog.html" />
-<link rel="import" href="../../../../bower_components/paper-input/paper-input.html" />
-<link rel="import" href="../../../../bower_components/paper-card/paper-card.html" />
-<link rel="import" href="../../../../bower_components/paper-button/paper-button.html" />
-<link rel="import" href="../../../../bower_components/app-layout/app-grid/app-grid-style.html" />
+
+<link rel="import" href="../../../../bower_components/neon-animation/neon-animated-pages.html" />
+
+
 <link rel="import" href="../../../../bower_components/iron-media-query/iron-media-query.html" />
+
 <link rel="import" href="../../../elements/su-header/su-header.html" />
-<link rel="import" href="../../../elements/guuey-date-input/guuey-date-input.html" />
-<link rel="import" href="../../../elements/guuey-list-input/guuey-list-input.html" />
-<link rel="import" href="../../../elements/guuey-text-input/guuey-text-input.html" />
-<link rel="import" href="../../../elements/guuey-notify/guuey-notify.html" />
-<link rel="import" href="../../../elements/guuey-custom-text-input/guuey-custom-text-input.html" />
 
 <link rel="import" href="../../../behaviors/animations/care-plan-animation.html" />
+<link rel="import" href="../../../behaviors/fab-animation-behavior.html" />
+<link rel="import" href="../../../behaviors/su-print-behavior.html" />
+<link rel="import" href="../../../behaviors/su-resize-behavior.html" />
+
+<link rel="import" href="../../../styles/common-styles.html" />
+
+<link rel="import" href="./su-care-review-edit-view.html" />
+<link rel="import" href="./su-care-review-multi-view.html" />
