added sorting based on next review date and dynamic images. still need images from zivile. these changes are for su-care-review. updated guuey-date-input to take css mixins for the paper-input element.

--- a/src/elements/guuey-date-input/guuey-date-input.html
+++ b/src/elements/guuey-date-input/guuey-date-input.html
@@ -28,16 +28,17 @@
         --paper-input-container-disabled:{
           opacity:1;
           z-index:1;
-        }
+        };
         --paper-input-container-underline-disabled:{
           border-bottom: 1px solid #6A49B2;
-        }
+        };
         --paper-input-container-label:{
           color:#6A49B2;
-        }
+        };
         --paper-input-container-input:{
           color:#6A49B2;
-        }
+        };
+        @apply(--date-paper-input-style);
       }
       .buttonWrapper{
         z-index:2;
