--- a/src/styles/common-styles.html
+++ b/src/styles/common-styles.html
@@ -170,11 +170,17 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         background-color:#3d4ba8;
         color:#FFF;
       }
-      .guuey-add-modal paper-button{
-        color:#673AB7;
+      .modal-date-input{
+        --date-paper-input-style:{
+          margin-right:20px;
+          margin-left:20px;
+        };
       }
       .guuey-view-modal paper-button{
         color:#3d4ba8;
+      }
+      .guuey-add-modal paper-button{
+        color:#673AB7;
       }
       .guuey-modal{
         --paper-dialog:{
@@ -217,7 +223,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
       .multiItem{
         margin:20px;
-        
+
       }
     </style>
   </template>
